ClassModifiers2/src/test/Tea.java
package test;

public class Tea extends Beverage { // error

	/*
	 * Now, if we try to compile the Tea subclass:
	 * Because ;
	 * you cannot inherit from the final class.
	 */
}
